Some confusion refactored from moving of critical CSS; other critical images moved from cloudinary to host

--- a/pages/mobile/aboutMobile.html
+++ b/pages/mobile/aboutMobile.html
@@ -42,7 +42,7 @@
           
           
             <img class="mobile-about-img"
-              src="https://res.cloudinary.com/diyrbemqw/image/upload/v1681081098/inkbus-mobile/inkbus-mobile-about/aboutMarkoon_odwive.webp"
+              src="../../assets/images/mobile-critical/aboutMarkoon/aboutMarkoon.webp"
               alt="Portrait of Markoon Dugally, founder of INKBUS Mobile"
               width="400"
               height="auto"
@@ -73,14 +73,14 @@
       <!-- Artist Gallery Navigation -->
       <nav id="mobile-about-galleries-nav" aria-label="Tattoo gallery navigation">
         <a href="aboutMobile-CustomWork.html" aria-label="View custom tattoo work gallery">
-          <img src="https://res.cloudinary.com/diyrbemqw/image/upload/c_scale,e_improve,h_500,q_auto:good,w_500/v1683313505/inkbus-mobile/inkbus-mobile-about/CustomWrkBtn_xptkac.webp"
+          <img src="../../assets/images/mobile-critical/aboutMarkoon/CustomWrkBtn.webp"
             alt="Custom Work Gallery button"
             width="300"
             height="400"
             loading="lazy">
         </a>
         <a href="aboutMobile-EventFlash.html" aria-label="View event flash tattoo gallery">
-          <img src="https://res.cloudinary.com/diyrbemqw/image/upload/c_scale,e_improve,h_500,q_auto:good,w_500/v1683313505/inkbus-mobile/inkbus-mobile-about/EventFlashBtn_nfkn2t.webp"
+          <img src="../../assets/images/mobile-critical/aboutMarkoon/EventFlashBtn.webp"
             alt="Event Flash Gallery button"
             width="300"
             height="400"
