--- a/pages/mobile/eventCalendar.html
+++ b/pages/mobile/eventCalendar.html
@@ -48,7 +48,7 @@
         <h2 id="flash-board-heading">Flash Board</h2>
         
         <button type="button" id="flash-board" aria-label="View flash board in fullscreen">
-          <img src="https://res.cloudinary.com/diyrbemqw/image/upload/c_scale,e_improve,h_700,q_auto:good,w_363/v1683096280/inkbus-mobile/inkbus-mobile-calendar/inkbusFlashBoard_23_umsrfo.webp" 
+          <img src="../../assets/images/mobile-critical/eventCallendar/inkbusFlashBoard_23.webp" 
                alt="INKBUS 2023 Flash Board showing available tattoo designs" 
                width="363" 
                height="700">
@@ -58,7 +58,7 @@
           <button onclick="document.getElementById('flashModal').close()" class="modal-close" aria-label="Close flash board">
             <i class="fa-solid fa-xmark"></i>
           </button>
-          <img src="https://res.cloudinary.com/diyrbemqw/image/upload/c_scale,e_improve,h_700,q_auto:good,w_363/v1683096280/inkbus-mobile/inkbus-mobile-calendar/inkbusFlashBoard_23_umsrfo.webp" 
+          <img src="../../assets/images/mobile-critical/eventCallendar/inkbusFlashBoard_23.webp" 
                alt="INKBUS 2023 Flash Board showing available tattoo designs">
         </dialog>
         
