--- a/pages/mobile/mobile.html
+++ b/pages/mobile/mobile.html
@@ -33,7 +33,7 @@
         <a href="servicesMobile.html" aria-label="View INKBUS Mobile services">
           <img
             class="mobile-nav-img full-size"
-            src="https://res.cloudinary.com/diyrbemqw/image/upload/v1681081227/inkbus-mobile/inkbus-mobile-btns/FullServices_zkgejx.webp"
+            src="../../assets/images/mobile-critical/mobileLanding/FullServices.webp"
             alt="Services - Explore INKBUS Mobile tattoo services and pricing"
             width="300"
             height="300"
@@ -43,7 +43,7 @@
         <a href="servicesMobile.html" aria-label="View INKBUS Mobile services">
           <img
             class="mobile-nav-img mini-size"
-            src="https://res.cloudinary.com/diyrbemqw/image/upload/v1681081228/inkbus-mobile/inkbus-mobile-btns/MiniMobile_qhioml.webp"
+            src="../../assets/images/mobile-critical/mobileLanding/MiniMobile.webp"
             alt="Services - Explore INKBUS Mobile tattoo services and pricing"
             width="150"
             height="150"
@@ -54,7 +54,7 @@
         <a href="eventCalendar.html" aria-label="View events calendar">
           <img
             class="mobile-nav-img full-size"
-            src="https://res.cloudinary.com/diyrbemqw/image/upload/v1681081227/inkbus-mobile/inkbus-mobile-btns/FullEvents_q5fmnx.webp"
+            src="../../assets/images/mobile-critical/mobileLanding/FullEvents.webp"
             alt="Events Calendar - View upcoming INKBUS appearances and flash events"
             width="300"
             height="300"
@@ -64,7 +64,7 @@
         <a href="eventCalendar.html" aria-label="View events calendar">
           <img
             class="mobile-nav-img mini-size"
-            src="https://res.cloudinary.com/diyrbemqw/image/upload/v1681081228/inkbus-mobile/inkbus-mobile-btns/MiniEvents_cyfsxz.webp"
+            src="../../assets/images/mobile-critical/mobileLanding/MiniEvents.webp"
             alt="Events Calendar - View upcoming INKBUS appearances and flash events"
             width="150"
             height="150"
@@ -76,7 +76,7 @@
         <a href="aboutMobile.html" aria-label="About Markoon and INKBUS Mobile">
           <img
             class="mobile-nav-img full-size"
-            src="https://res.cloudinary.com/diyrbemqw/image/upload/v1681081227/inkbus-mobile/inkbus-mobile-btns/FullMark_xngknm.webp"
+            src="../../assets/images/mobile-critical/mobileLanding/FullMark.webp"
             alt="About Markoon - Learn about the artist behind INKBUS"
             width="300"
             height="300"
@@ -86,7 +86,7 @@
         <a href="aboutMobile.html" aria-label="About Markoon and INKBUS Mobile">
           <img
             class="mobile-nav-img mini-size"
-            src="https://res.cloudinary.com/diyrbemqw/image/upload/v1681081228/inkbus-mobile/inkbus-mobile-btns/MiniMark_ewacry.webp"
+            src="../../assets/images/mobile-critical/mobileLanding/MiniMark.webp"
             alt="About Markoon - Learn about the artist behind INKBUS"
             width="150"
             height="150"
@@ -97,7 +97,7 @@
         <a href="innerPortraits.html" aria-label="View Inner Portraits gallery">
           <img
             class="mobile-nav-img full-size"
-            src="https://res.cloudinary.com/diyrbemqw/image/upload/v1681081227/inkbus-mobile/inkbus-mobile-btns/FullInner_o31lq1.webp"
+            src="../../assets/images/mobile-critical/mobileLanding/FullInner.webp"
             alt="Inner Portraits - View Markoon's portrait tattoo gallery"
             width="300"
             height="300"
@@ -107,7 +107,7 @@
         <a href="innerPortraits.html" aria-label="View Inner Portraits gallery">
           <img
             class="mobile-nav-img mini-size"
-            src="https://res.cloudinary.com/diyrbemqw/image/upload/v1681081228/inkbus-mobile/inkbus-mobile-btns/MiniInner_jkyus8.webp"
+            src="../../assets/images/mobile-critical/mobileLanding/MiniInner.webp"
             alt="Inner Portraits - View Markoon's portrait tattoo gallery"
             width="150"
             height="150"
@@ -118,7 +118,7 @@
         <a href="contactMobile.html" aria-label="Contact INKBUS Mobile">
           <img
             class="mobile-nav-img full-size"
-            src="https://res.cloudinary.com/diyrbemqw/image/upload/v1681081227/inkbus-mobile/inkbus-mobile-btns/FullContact_oypeyw.webp"
+            src="../../assets/images/mobile-critical/mobileLanding/FullContact.webp"
             alt="Contact - Get in touch with INKBUS Mobile"
             width="300"
             height="300"
@@ -128,7 +128,7 @@
         <a href="contactMobile.html" aria-label="Contact INKBUS Mobile">
           <img
             class="mobile-nav-img mini-size"
-            src="https://res.cloudinary.com/diyrbemqw/image/upload/v1681081227/inkbus-mobile/inkbus-mobile-btns/MiniContact_ziog5w.webp"
+            src="../../assets/images/mobile-critical/mobileLanding/MiniContact.webp"
             alt="Contact - Get in touch with INKBUS Mobile"
             width="150"
             height="150"
