--- a/pages/mobile/servicesMobile.html
+++ b/pages/mobile/servicesMobile.html
@@ -33,7 +33,7 @@
         <div class="global-image-container">
           <img
             class="mobile-services-img"
-            src="https://res.cloudinary.com/diyrbemqw/image/upload/v1681081279/inkbus-mobile/inkbus-mobile-services/mobileServicesBigFoot_ld5ikf.webp"
+            src="../../assets/images/mobile-critical/mobileServices/mobileServicesBigFoot.webp"
             alt="INKBUS with Bigfoot outside"
             width="300px"
             height="auto"
@@ -44,7 +44,7 @@
         <div class="global-image-container">
           <img
             class="mobile-services-img"
-            src="https://res.cloudinary.com/diyrbemqw/image/upload/v1681081279/inkbus-mobile/inkbus-mobile-services/mobileServicesLineUp_gcwok5.webp"
+            src="../../assets/images/mobile-critical/mobileServices/mobileServicesLineUp.webp"
             alt="People waiting in line at INKBUS"
             width="300px"
             height="auto"
@@ -55,8 +55,8 @@
         <div class="global-image-container">
           <img
             class="mobile-services-img"
-            src="https://res.cloudinary.com/diyrbemqw/image/upload/v1681081279/inkbus-mobile/inkbus-mobile-services/mobileServicesSharedInk_pa8btq.webp"
-            alt="Group of four friend showing off thier new matching tattoos"
+            src="../../assets/images/mobile-critical/mobileServices/mobileServicesSharedInk.webp"
+            alt="Group of four friend showing off their new matching tattoos"
             width="300px"
             height="auto"
             border="0"
@@ -66,7 +66,7 @@
         <div class="global-image-container">
           <img
             class="mobile-services-img"
-            src="https://res.cloudinary.com/diyrbemqw/image/upload/v1681081279/inkbus-mobile/inkbus-mobile-services/mobileServicesWedding_zahym6.webp"
+            src="../../assets/images/mobile-critical/mobileServices/mobileServicesWedding.webp"
             alt="Bride, Groom, and Mark at door of INKBUS"
             width="300px"
             height="auto"
